fixed overflow scrolling

--- a/scss/common.inverted.scss
+++ b/scss/common.inverted.scss
@@ -39,7 +39,6 @@ code {
   margin: 15px 0;
   border-radius: 10px;
   text-align: left;
-  overflow-x: scroll;
 }
 
 .code {
